# mm-dinov2

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dinov2/configs/: ssl_default_config.yaml
dinov2/configs/eval/: vitb14_pretrain.yaml  vitg14_pretrain.yaml  vitl14_pretrain.yaml
dinov2/configs/train/: glioma_vitb14_mm-dino_v2.yaml  vitb14_short_cluster.yaml
dinov2/data/: __init__.py  augmentations.py  collate.py  loaders.py  transforms.py
dinov2/data/datasets/: __init__.py  amos.py  glioma_ssl.py  glioma_supervised.py  medical_dataset.py
dinov2/data/monai_transforms/: compose.py  glioma.py  io.py  rc_aug.py  spatial.py
dinov2/eval/: log_regression.py  metrics.py  setup.py  utils.py
dinov2/eval/classification/: linear.py  utils.py
dinov2/fsdp/: __init__.py
dinov2/layers/: __init__.py  patch_embed.py
dinov2/logging/: __init__.py  helpers.py
dinov2/models/: __init__.py  glioma_vit.py  vision_transformer.py
dinov2/train/: __init__.py  ssl_meta_arch.py  train.py
dinov2/utils/: __init__.py  cluster.py  config.py  dtype.py  utils.py
dinov2/visualization/train/: vis_loss.py
docs/: DATASETS.md
glioma_splits/: test.txt  test_supervised.txt  train.txt  train_supervised.txt  val.txt  val_supervised.txt
scripts/: create_glioma_splits.py
